Tue May 18 2004  Joe Allen <jhallen@world.std.com>

	Changed ESC y to yank in joerc.  Left ESC ^Y
	as yankpop.

	Added "spring" escape sequence for help text.

Mon May 17 2004  Joe Allen <jhallen@world.std.com>

	Fix backspace handling in shell windows.
	Ring bell when we get ^G.

Sun May 16 2004  Joe Allen <jhallen@world.std.com>

	Fix -syntax and -encoding on command line.

	Check for "pty.h" when openpty is used.

Sun May 16 2004  Joe Allen <jhallen@world.std.com>

	Fix mason bug.
	Change ^K ^M back to move block.
	^K H in jstar mode is "nmark".

Fri May 14 2004  Joe Allen <jhallen@world.std.com>

	Mason highlighter

Fri May 14 2004  Joe Allen <jhallen@world.std.com>

	Many jpicorc.in improvements.

Thu May 13 2004  Joe Allen <jhallen@world.std.com>

	Improve exit messages.

	Improve 'lose' which is for jmacs.

	Improve ^X for jpico.

	Got rid of "end of processs" message in shell windows.

	Shell windows can now be orphaned and duplicated (process
	is associated with B instead of BW).

	Shell window input taken from cmd.c instead of in
	actual edit functions.

	Improved 'lose' again- now it fill in windows with any
	orphaned buffers it can find.

Thu May 13 2004  Joe Allen <jhallen@world.std.com>

	Small compile fix.

Wed May 12 2004  Joe Allen <jhallen@world.std.com>

	Compile now uses shell window (so you can hit ^C during the
	compile.

	Shell window termination code fix: now all of the output always
	makes it to the window.

	Added query save loop to save all modified files before build.

	Added scratch buffers: they are ignored during ^K X, ^C and
	querysave.

	^X ^C is now much more like emacs.

	Fixed annoying occasional screen update glitch: it was caused
	by SIGALRM causing dropped output in Linux (doesn't happen on
	SUN).  So now we arm SIGALRM only when waiting for input.  (SIGALRM
	is used to keep the clock updated).

Wed May 12 2004  Joe Allen <jhallen@world.std.com>

	Applied Olexiy Avramchenko's <olexiy@irtech.cn.ua> patch