@@ -1,3 +1,8 @@
+Wed May 19 2004  Joe Allen <jhallen@world.std.com>
+
+	More fixes for Cygwin: shell windows now
+	work properly.
+
 Tue May 18 2004  Joe Allen <jhallen@world.std.com>
 
 	Changed ESC y to yank in joerc.  Left ESC ^Y
